Add Comment in PIL

--- a/ALLCodes (1).ipynb
+++ b/ALLCodes (1).ipynb
@@ -1,63 +1,55 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!apt-get install poppler-utils\n",
-        "!pip install pdf2image"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "PXqSquru_2Bj"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!apt-get install poppler-utils\n",
+        "!pip install pdf2image"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "-Xnr7K7al75Y"
+      },
       "source": [
         "Layouts: https://github.com/PrakharSaxena144/Minor-Project/blob/main/input%20data%20layouts_5.pdf\n",
         "\n",
         "Dataset for Unet: https://drive.google.com/drive/folders/1bCpjt5gj1pcKABma2espjTPzSGuPFwtA?usp=drive_link"
-      ],
-      "metadata": {
-        "id": "-Xnr7K7al75Y"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Basic Codes"
-      ],
       "metadata": {
         "id": "EtIxZQ2pCuno"
-      }
+      },
+      "source": [
+        "## Basic Codes"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Image Rotator"
-      ],
       "metadata": {
         "id": "xK0wn7zZC38i"
-      }
+      },
+      "source": [
+        "### Image Rotator"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "weCiwcXoC0LB"
+      },
+      "outputs": [],
       "source": [
+        "# Convert PDF to images\n",
         "from PIL import Image\n",
         "\n",
         "def rotate_image_pil(image_path, angle, output_path=\"rotated_image.png\"):\n",
@@ -71,24 +63,24 @@
         "\n",
         "# With angle = 90 → rotates counterclockwise\n",
         "# With angle = -90 → rotates clockwise"
-      ],
-      "metadata": {
-        "id": "weCiwcXoC0LB"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Selectable Text Remover"
-      ],
       "metadata": {
         "id": "T4DqWKOsCoEJ"
-      }
+      },
+      "source": [
+        "### Selectable Text Remover"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "cxCw3wJ1Cmos"
+      },
+      "outputs": [],
       "source": [
         "import fitz  # PyMuPDF\n",
         "import os\n",
@@ -142,34 +134,32 @@
         "\n",
         "# Run the main function\n",
         "remove_selectable_text(INPUT_PDF, OUTPUT_PDF)"
-      ],
-      "metadata": {
-        "id": "cxCw3wJ1Cmos"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "UWFE-OaBCmlZ"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "zn8UvLnFEt5M"
+      },
       "source": [
         "# SSIM\n",
         "## (Structural Similarity Index Measure)"
-      ],
-      "metadata": {
-        "id": "zn8UvLnFEt5M"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "GCgasmBEEt18"
+      },
       "source": [
         "Used for comparing 2 images.\n",
         "\n",
@@ -179,22 +169,36 @@
         "\n",
         "Link:\n",
         "https://colab.research.google.com/drive/1uxKlL402nxPk1Se2jkFoEcyIM0MMzW6g#scrollTo=EYfy32RxDGx-"
-      ],
-      "metadata": {
-        "id": "GCgasmBEEt18"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###### Without Overlay (Overlay means showing regions that are marked as different)"
-      ],
       "metadata": {
         "id": "Xdnbb-ESg-1i"
-      }
+      },
+      "source": [
+        "###### Without Overlay (Overlay means showing regions that are marked as different)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "PFpC7ARafahz"
+      },
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'cv2'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[1], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mcv2\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cv2'"
+          ]
+        }
+      ],
       "source": [
         "# Tile-based hybrid SSIM + intensity change detection\n",
         "# Red-transparent overlay on the actual satellite image (presentation-quality)\n",
@@ -479,24 +483,24 @@
         "    # Use medium sensitivity (threshold=0.3) as requested\n",
         "    res = run_tile_change_detection(SATELLITE_PATH, LAYOUT_PATH, tile_size=TILE_SIZE,\n",
         "                                    hybrid_thresh=HYBRID_THRESH)\n"
-      ],
-      "metadata": {
-        "id": "PFpC7ARafahz"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "With Overlay"
-      ],
       "metadata": {
         "id": "pXZnF7w8hjW5"
-      }
+      },
+      "source": [
+        "With Overlay"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "rS-NHMv6fadj"
+      },
+      "outputs": [],
       "source": [
         "# Tile-based hybrid SSIM + intensity change detection\n",
         "# Red-transparent overlay on the actual satellite image (presentation-quality)\n",
@@ -821,26 +825,24 @@
         "    # Use medium sensitivity (threshold=0.3) as requested\n",
         "    res = run_tile_change_detection(SATELLITE_PATH, LAYOUT_PATH, tile_size=TILE_SIZE,\n",
         "                                    hybrid_thresh=HYBRID_THRESH)\n"
-      ],
-      "metadata": {
-        "id": "rS-NHMv6fadj"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "biieYTupe-on"
+      },
       "source": [
         "# Segmentation\n",
         "\n",
         "Goal: Want to achieve clear road & wall bundaries on grayscale."
-      ],
-      "metadata": {
-        "id": "biieYTupe-on"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Xf7SxCw6ADNY"
+      },
       "source": [
         "## Approach 1\n",
         "### Applying K means and Gray scale segementation\n",
@@ -848,22 +850,24 @@
         "Link: https://colab.research.google.com/drive/11gVZr-GnOizhG8OowdTCLfaaOLKD-Ish#scrollTo=xD2OlEsxyQmT\n",
         "\n",
         "Outcome: Good result on Map layouts, but algorithm capture noise in real satellite images (like trees, bushes, vehicles)"
-      ],
-      "metadata": {
-        "id": "Xf7SxCw6ADNY"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#### Image extractor from pdf and applying K means and Gray scale segementation"
-      ],
       "metadata": {
         "id": "lQUKwKEFCV7l"
-      }
+      },
+      "source": [
+        "#### Image extractor from pdf and applying K means and Gray scale segementation"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "RCEGh1trACxf"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "import numpy as np\n",
@@ -1036,24 +1040,24 @@
         "if __name__ == \"__main__\":\n",
         "    input_pdf = \"/content/map_no_selectable_text.pdf\"\n",
         "    process_pdf_pipeline(input_pdf)"
-      ],
-      "metadata": {
-        "id": "RCEGh1trACxf"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#### Single image Segementation (If you don't working on pdf)"
-      ],
       "metadata": {
         "id": "xI8rcQWIB78c"
-      }
+      },
+      "source": [
+        "#### Single image Segementation (If you don't working on pdf)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "B5GmMKCYB6Fq"
+      },
+      "outputs": [],
       "source": [
         "### Cell 1: Setup and Imports\n",
         "\n",
@@ -1142,24 +1146,22 @@
         "    print(f\"\\nEdge-detected image saved as '{output_path}'\")\n",
         "else:\n",
         "    print(\"Could not find the image to perform edge detection. Please check the previous cell.\")\n"
-      ],
-      "metadata": {
-        "id": "B5GmMKCYB6Fq"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "npap8CxtB6B_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "KZnoA8p0EcZO"
+      },
       "source": [
         "## Approach 2\n",
         "Applied SSIM directly on Satellite image and layout directly\n",
@@ -1167,26 +1169,26 @@
         "Link: https://colab.research.google.com/drive/1uxKlL402nxPk1Se2jkFoEcyIM0MMzW6g#scrollTo=rp6I0BnjDGPy\n",
         "\n",
         "Outcome: Better results, but same noise issue"
-      ],
-      "metadata": {
-        "id": "KZnoA8p0EcZO"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "RGR-3q4-iXG9"
+      },
       "source": [
         "## Aprroach 3\n",
         "### Trained Unet model on \"massachusetts-roads-dataset\"\n",
         "Link: https://colab.research.google.com/drive/1uYOffbsvZ_2j7SpfCBEv6sdGg-X8JSNk\n",
         "\n",
         "Outcome: Model fail on local aligarh maps"
-      ],
-      "metadata": {
-        "id": "RGR-3q4-iXG9"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "YfRnzD6fD9g4"
+      },
       "source": [
         "## Approach 4\n",
         "Created Hand labels from Satellite images and then trained the Unet model on Alig Dataset\n",
@@ -1198,13 +1200,13 @@
         "https://colab.research.google.com/drive/1i4Mg1hItzSevyb_l0D3BsrV2MZYnXnqw\n",
         "\n",
         "Outcome: Model failure, due to less data item (53 images) model learns only black pixels"
-      ],
-      "metadata": {
-        "id": "YfRnzD6fD9g4"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "3s8HYdutj6gL"
+      },
       "source": [
         "## Approch 5\n",
         "### Transfer Learning\n",
@@ -1214,22 +1216,24 @@
         "Link: https://colab.research.google.com/drive/1i4Mg1hItzSevyb_l0D3BsrV2MZYnXnqw\n",
         "\n",
         "Outcome: Best results till now..."
-      ],
-      "metadata": {
-        "id": "3s8HYdutj6gL"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Best result when training for 50 epochs"
-      ],
       "metadata": {
         "id": "bDx2QGjwxpcO"
-      }
+      },
+      "source": [
+        "Best result when training for 50 epochs"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "JC3kg72Jx6Qh"
+      },
+      "outputs": [],
       "source": [
         "# =========================================================================\n",
         "# 1. SETUP, IMPORTS, AND PATHS\n",
@@ -1556,24 +1560,24 @@
         "    Ground_Truth_Mask = ground_truth_mask_resized,\n",
         "    Predicted_Mask_UNet = predicted_mask_binary\n",
         ")"
-      ],
-      "metadata": {
-        "id": "JC3kg72Jx6Qh"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Generate segmentated image for input satellite image using best_model.pth"
-      ],
       "metadata": {
         "id": "LUq4hP52yJ2I"
-      }
+      },
+      "source": [
+        "### Generate segmentated image for input satellite image using best_model.pth"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ks4KY6mAyXwQ"
+      },
+      "outputs": [],
       "source": [
         "# =========================================================================\n",
         "# 6. DEPLOYMENT: PREDICT ON UNSEEN USER IMAGES AND SAVE MASK\n",
@@ -1665,15 +1669,13 @@
         "# Execute the prediction function\n",
         "# ----------------------------------------------------\n",
         "final_mask = predict_and_visualize_user_image(USER_INPUT_IMAGE_PATH, best_model, DEVICE, OUTPUT_FILENAME)"
-      ],
-      "metadata": {
-        "id": "ks4KY6mAyXwQ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "zr9wVNcltgfM"
+      },
       "source": [
         "# Testing\n",
         "### Test run on different possibilites\n",
@@ -1689,64 +1691,84 @@
         "Testing the Transfered Model\n",
         "\n",
         "https://colab.research.google.com/drive/1kk_kzE6ViYAr3WDLgQvM_w8sRn6bl3GJ"
-      ],
-      "metadata": {
-        "id": "zr9wVNcltgfM"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "Ri6R1L5fACuH"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "_kYtGEfJ_8Bb"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "AcwflhUN_7-Q"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "MyeXq3mC_779"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "PjhWR4e5_76A"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "DKiEia0w_73l"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.10"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
